--- a/static-site-test/test-auth-server.html
+++ b/static-site-test/test-auth-server.html
@@ -2,14 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta
-      http-equiv="x-ua-compatible"
-      content="ie=edge"
-    />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1"
-    />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>Test Auth Server</title>
   </head>
@@ -30,22 +24,16 @@
       <p>Click the button below to get your OAuth URL.</p>
       <button id="getCode">Get OAuth URL</button>
       <p id="result"></p>
-      <a
-        id="authURL"
-        href
-        target="_blank"
-        >Click to authorize</a
-      >
+      <a id="authURL" href target="_blank">Click to authorize</a>
       <h4>Step 2: Get your code and exchange for an access token</h4>
-      <p>After you're redirected back to your Meet app on GitHub, copy the code from the URI.</p>
+      <p>
+        After you're redirected back to your Meet app on GitHub, copy the code
+        from the URI.
+      </p>
       <br />
       <label
         >Code input
-        <input
-          id="code"
-          type="text"
-          value=""
-        />
+        <input id="code" type="text" value="" />
       </label>
       <button id="getToken">Get Token</button>
       <p id="accessToken"></p>
@@ -62,7 +50,7 @@
       const resultLink = document.getElementById('authURL');
       // Replace this with your own endpoint
       const getAuthURL =
-        'https://g12701hnn5.execute-api.eu-central-1.amazonaws.com/dev/api/get-auth-url';
+        'https://kt7wcn877g.execute-api.eu-central-1.amazonaws.com/dev/api/get-auth-url';
 
       getCodeElement.onclick = function () {
         fetch(getAuthURL)
@@ -81,7 +69,8 @@
       const codeValue = document.getElementById('code');
       const getAccessToken = document.getElementById('getToken');
       const accessTokenElement = document.getElementById('accessToken');
-      const getToken = ' https://g12701hnn5.execute-api.eu-central-1.amazonaws.com/dev/api/token';
+      const getToken =
+        'https://kt7wcn877g.execute-api.eu-central-1.amazonaws.com/dev/api/token';
 
       getAccessToken.onclick = function () {
         let code = codeValue.value;
@@ -104,7 +93,7 @@
       const getEvents = document.getElementById('getEvents');
       const events = document.getElementById('events');
       const getCalendarEvents =
-        'https://g12701hnn5.execute-api.eu-central-1.amazonaws.com/dev/api/get-events';
+        'https://kt7wcn877g.execute-api.eu-central-1.amazonaws.com/dev/api/get-events';
 
       getEvents.onclick = function () {
         const { access_token } = JSON.parse(accessTokenElement.innerText);
