--- a/static-site-test/test-auth-server.html
+++ b/static-site-test/test-auth-server.html
@@ -22,13 +22,14 @@
       <h1>OAuth2 Test</h1>
       <h4><b>Step 1:</b> Get the OAuth URL</h4>
       <p>Click the button below to get your OAuth URL.</p>
-      <button id="getURL">Get OAuth URL</button>
+      <button id="getAuthUrlButton">Get OAuth URL</button>
       <p id="result"></p>
       <a id="authURL" href target="_blank">Click to authorize</a>
+      <!-- STEP 2 -- MAKE SURE STEP 1 WORKS BEFORE MOVING ON-->
 
       <h4>Step 2: Get your code and exchange for an access token</h4>
       <p>
-        After you're redirected back to your Meet app on GitHub, copy the code
+        After youre redirected back to your Meet app on GitHub, copy the code
         from the URI.
       </p>
       <br />
@@ -38,32 +39,33 @@
       </label>
       <button id="getToken">Get Token</button>
       <p id="accessToken"></p>
-
-      <h4>Step 3: Get the calendar events using your access token</h4>
-      <button id="getEvents">Get Events</button>
-      <p id="events"></p>
     </main>
     <script type="text/javascript">
-      const getURLElement = document.getElementById("getURL");
+      // --------------------- STEP 1
+      const getAuthUrlButton = document.getElementById("getAuthUrlButton");
       const resultElement = document.getElementById("result");
       const resultLink = document.getElementById("authURL");
+      // Replace this with your own endpoint
       const getAuthURL =
         "https://kt7wcn877g.execute-api.eu-central-1.amazonaws.com/dev/api/get-auth-url";
 
-      getURLElement.onclick = function () {
+      getAuthUrlButton.onclick = function () {
         fetch(getAuthURL)
           .then(function (response) {
             return response.json();
           })
           .then(function (json) {
             const result = JSON.stringify(json);
+            // we get the value of authUrl
             const { authUrl } = JSON.parse(result);
+            // then add it to the html
             resultElement.innerText = result;
             resultLink.href = authUrl;
-            console.log(result);
           });
       };
+      // --------------------- END OF STEP 1
 
+      // --------------------- STEP 2
       const codeValue = document.getElementById("code");
       const getAccessToken = document.getElementById("getToken");
       const accessTokenElement = document.getElementById("accessToken");
@@ -73,24 +75,24 @@
       getAccessToken.onclick = function () {
         let code = codeValue.value;
 
+        // if the authorization code is not URL-encoded, then URL-encode it.
         if (decodeURIComponent(code) === code) {
           code = encodeURIComponent(codeValue.value);
         }
-        const getTokenRequest = getToken + "/" + code;
+        const getTokenRequest = getToken +  "/" + code;
         fetch(getTokenRequest)
           .then(function (response) {
             return response.json();
           })
           .then(function (json) {
             accessTokenElement.innerText = JSON.stringify(json);
-            console.log(JSON.stringify(json));
           });
       };
-
-      const getEvents = document.getElementById("getEvents");
+      // --------------------- END OF STEP 2
+ // -- STEP 3
+ const getEvents = document.getElementById("getEvents");
       const events = document.getElementById("events");
-      const getCalendarEvents =
-        "https://kt7wcn877g.execute-api.eu-central-1.amazonaws.com/dev/api/get-events";
+      const getCalendarEvents = "https://kt7wcn877g.execute-api.eu-central-1.amazonaws.com/dev/api/get-events/";
 
       getEvents.onclick = function () {
         const { access_token } = JSON.parse(accessTokenElement.innerText);
